<resources>
    <string name="app_name">Alodokter Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon">icon</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="error">Error</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="edit_user">Edit User</string>
    <string name="close_edit">Close Edit</string>
    <string name="save">SAVE</string>
    <string name="search">Search</string>
    <string name="group">Group</string>
    <string name="sort">Sort</string>
    <string name="logout">Logout</string>
    <string name="sort_contents">Sort Contents</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="option_content">Option Content</string>
    <string name="edit_content">Edit Content</string>
    <string name="delete_content">Delete Content</string>
    <string name="pilih_0">Pilih (0)</string>
</resources>