<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".mvvm.views.fragments.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/size250"
            android:layout_height="@dimen/size250"
            android:contentDescription="@string/icon"
            android:src="@drawable/content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="@dimen/font28" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space32"
            android:layout_marginTop="@dimen/space32"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="@dimen/font16" />

            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input"
                android:inputType="textPersonName"
                android:paddingHorizontal="@dimen/space16"
                android:paddingVertical="@dimen/space12"
                android:textSize="@dimen/font14"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/txtNameError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error"
                android:textColor="@color/red"
                android:textSize="@dimen/font14"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space32"
            android:layout_marginTop="@dimen/space16"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="@dimen/font16" />

            <EditText
                android:id="@+id/inputPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input"
                android:inputType="phone"
                android:paddingHorizontal="@dimen/space16"
                android:paddingVertical="@dimen/space12"
                android:textSize="@dimen/font14"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/txtPhoneError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error"
                android:textColor="@color/red"
                android:textSize="@dimen/font14"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space32"
            android:layout_marginTop="@dimen/space16"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="@dimen/font16" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/space16"
                android:paddingVertical="@dimen/space12"
                android:textSize="@dimen/font14"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/txtEmailError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error"
                android:textColor="@color/red"
                android:textSize="@dimen/font14"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space32"
            android:layout_marginTop="@dimen/space16"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="@dimen/font16" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/space16"
                android:paddingVertical="@dimen/space12"
                android:textSize="@dimen/font14"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/txtPasswordError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error"
                android:textColor="@color/red"
                android:textSize="@dimen/font14"
                android:visibility="gone" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space32"
            android:layout_marginTop="@dimen/space16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/gender"
                android:textSize="@dimen/font16" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal"
                tools:ignore="RelativeOverlap">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textSize="@dimen/font16" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/space8"
                    android:theme="@style/CustomSwitch" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textSize="@dimen/font16" />

            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space32"
            android:layout_marginTop="@dimen/space16"
            android:background="@drawable/bg_button_primary"
            android:text="@string/register"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space32"
            android:layout_marginTop="@dimen/space16"
            android:layout_marginBottom="@dimen/space32"
            android:background="@drawable/bg_button_primary"
            android:text="@string/login"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>