<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".mvvm.views.fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/size250"
            android:layout_height="@dimen/size250"
            android:contentDescription="@string/icon"
            android:src="@drawable/content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="@dimen/font28" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space32"
            android:layout_marginTop="@dimen/space32"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="@dimen/font16" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/space16"
                android:paddingVertical="@dimen/space12"
                android:textSize="@dimen/font14"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/txtEmailError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error"
                android:textColor="@color/red"
                android:textSize="@dimen/font14"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space32"
            android:layout_marginTop="@dimen/space16"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="@dimen/font16" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/space16"
                android:paddingVertical="@dimen/space12"
                android:textSize="@dimen/font14"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/txtPasswordError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error"
                android:textColor="@color/red"
                android:textSize="@dimen/font14"
                android:visibility="gone" />

        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space32"
            android:layout_marginTop="@dimen/space16"
            android:background="@drawable/bg_button_primary"
            android:text="@string/login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space32"
            android:layout_marginTop="@dimen/space16"
            android:layout_marginBottom="@dimen/space32"
            android:background="@drawable/bg_button_primary"
            android:text="@string/register"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>