<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".mvvm.views.fragments.UserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space16">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintRead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input"
            android:padding="@dimen/space16">

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="@dimen/size100"
                android:layout_height="@dimen/size100"
                android:adjustViewBounds="true"
                android:contentDescription="@string/icon"
                android:scaleType="centerCrop"
                android:src="@drawable/gallery_kosong"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="@dimen/size0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space16"
                android:textColor="@color/black"
                android:textSize="@dimen/font16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgUser"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Haris Miftahul Hudha" />

            <TextView
                android:id="@+id/txtGender"
                android:layout_width="@dimen/size0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space4"
                android:textColor="@color/black"
                android:textSize="@dimen/font14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txtName"
                app:layout_constraintTop_toBottomOf="@+id/txtName"
                tools:text="Male" />

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="@dimen/size0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space4"
                android:textColor="@color/black"
                android:textSize="@dimen/font14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txtName"
                app:layout_constraintTop_toBottomOf="@+id/txtGender"
                tools:text="087855736502" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="@dimen/size0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space4"
                android:textColor="@color/black"
                android:textSize="@dimen/font14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txtName"
                app:layout_constraintTop_toBottomOf="@+id/txtPhone"
                tools:text="me@harismiftahulhudha.co" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/constraintEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/space16"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imgUserEdit"
                android:layout_width="@dimen/size100"
                android:layout_height="@dimen/size100"
                android:adjustViewBounds="true"
                android:contentDescription="@string/icon"
                android:scaleType="centerCrop"
                android:src="@drawable/gallery_kosong"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space32"
                android:layout_marginTop="@dimen/space32">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/gender"
                    android:textSize="@dimen/font16" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal"
                    tools:ignore="RelativeOverlap">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textSize="@dimen/font16" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switchGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/space8"
                        android:theme="@style/CustomSwitch" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textSize="@dimen/font16" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space32"
                android:layout_marginTop="@dimen/space16"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="@dimen/font16" />

                <EditText
                    android:id="@+id/inputName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_input"
                    android:inputType="textPersonName"
                    android:paddingHorizontal="@dimen/space16"
                    android:paddingVertical="@dimen/space12"
                    android:textSize="@dimen/font14"
                    tools:ignore="Autofill,LabelFor" />

                <TextView
                    android:id="@+id/txtNameError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error"
                    android:textColor="@color/red"
                    android:textSize="@dimen/font14"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space32"
                android:layout_marginTop="@dimen/space16"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="@dimen/font16" />

                <EditText
                    android:id="@+id/inputPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_input"
                    android:inputType="phone"
                    android:paddingHorizontal="@dimen/space16"
                    android:paddingVertical="@dimen/space12"
                    android:textSize="@dimen/font14"
                    tools:ignore="Autofill,LabelFor" />

                <TextView
                    android:id="@+id/txtPhoneError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error"
                    android:textColor="@color/red"
                    android:textSize="@dimen/font14"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space32"
                android:layout_marginTop="@dimen/space16"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="@dimen/font16" />

                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_input"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="@dimen/space16"
                    android:paddingVertical="@dimen/space12"
                    android:textSize="@dimen/font14"
                    tools:ignore="Autofill,LabelFor" />

                <TextView
                    android:id="@+id/txtEmailError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error"
                    android:textColor="@color/red"
                    android:textSize="@dimen/font14"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space32"
                android:layout_marginTop="@dimen/space16"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="@dimen/font16" />

                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_input"
                    android:inputType="textPassword"
                    android:paddingHorizontal="@dimen/space16"
                    android:paddingVertical="@dimen/space12"
                    android:textSize="@dimen/font14"
                    tools:ignore="Autofill,LabelFor" />

                <TextView
                    android:id="@+id/txtPasswordError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error"
                    android:textColor="@color/red"
                    android:textSize="@dimen/font14"
                    android:visibility="gone" />

            </LinearLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space32"
                android:layout_marginTop="@dimen/space16"
                android:background="@drawable/bg_button_primary"
                android:text="@string/save"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>